welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: ';' expected but 'return' found.
}	return var k
        ^