welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var k=false
  if (!estFaceMur()){
    avance()
    if (getCouleurSol()==Color.green)
    k=true
}	return var k
    // Write your code here
}